styles.scss
/* ... */
.wip-popup {
  z-index: var(--layer-popup);
  position: fixed;
  visibility: hidden;
  image-rendering: pixelated;
  box-sizing: border-box;
  bottom: 2rem;
  right: 2rem;
  width: 25vw;
  
  border-image: url(/img/border-2.png) 8 / 16px / 8px;
  animation: wip-popup 2s .25s ease;
  pointer-events: none;
}
@media (max-width: 768px) {
  .wip-popup {
    bottom: calc(96px + 1rem);
    left: 0;
    right: 0;
    margin: auto;
    width: 75vw
  }
}

// * @main # Generic Buttons
.button {
  --size: 2.5rem;
  user-select: none;
  display: inline-block;
  line-height: var(--size);
  padding: 0 calc(var(--size) / 2);
  
  color: var(--clr-text-dim);
  background-color: var(--clr-secondary);
  transition: .2s;
  text-decoration: none;
  &:is(:hover, :focus-within) {
    color: var(--clr-text);
    background-color: var(--clr-accent);
  }
}
.button--underline {
  --clr-underline-idle: var(--clr-text-fade);
  --clr-underline: var(--clr-accent);
  box-shadow: 0 -3px 0 0 inset var(--clr-underline-idle);
  &:is(:hover, :focus-within) {
    box-shadow: 0 -6px 0 0 inset var(--clr-underline);
  }
}
.button--download {
  --clr-underline-idle: var(--clr-primary);
  color: var(--clr-link-active);
  background-color: var(--clr-btn-download);
  transition-delay: .1s;
  &:is(:hover, :focus) {
    color: inherit;
    background-color: var(--clr-btn-download-hover);
    outline: 2px outset var(--clr-text);
    box-shadow: unset;
    transition-delay: 0s;
  }
}
.button {
  &:visited {
    color: inherit;
  }
  &:active {
    background-color: var(--clr-codeblock-bg);
    color: var(--clr-codeblock-text);
    box-shadow: 0 0 0 2px inset var(--clr-codeblock-text);
    transition: none;
  }
}

// * @main # Expandable
/* .expandable-column .expandable {
  display: flex;
  gap: 16px;
} This make the expandable vertical lmao. Saving it for future maybe */
.expandable {
  --speed-start: .5s;
  --speed-end: .5s;
  // --icon-atlas-size: 48px;
  margin: .75rem 0; 
  position: relative;
  &.slow {--speed-start: 1s;--speed-end: 1s;}
  &.fast {--speed-start: .25s;--speed-end: .25s;}
}
  // ? Title of content with icon */
.expandable-title {
  display: block;
  margin: 0;
  line-height: 48px;
  height: 48px;
  cursor: pointer;
  background-color: var(--clr-secondary);
  & > :not(.expandable-title-icon) {
    display: block;
    width: calc(100% - var(--icon-atlas-size));
    text-wrap: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: 24px;
    color: var(--clr-link);
  }
}
.expandable-title-icon,
.expandable-title-icon::after {
  --icon-atlas-x: 3;
  height: var(--icon-atlas-size);
  width: var(--icon-atlas-size);
  background-image: var(--icon-atlas48-path);
  background-position: calc(var(--icon-atlas-x) * (var(--icon-atlas-size) * -1) + var(--icon-atlas-size)) calc(var(--icon-atlas-y) * (var(--icon-atlas-size) * -1) + var(--icon-atlas-size));
}
.expandable-title-icon {
  --icon-atlas-y: 4;
  float: left;
  opacity: .5;
  // scale: .75;
  transition: opacity var(--speed-start);
}
.expandable-title-icon::after {
  --icon-atlas-y: 5;
  content: "";
  position: absolute;
  transition: transform var(--speed-start);
}
.expandable-content {
  display: grid;
  grid-template-rows: 0fr;
  padding: 0 16px;
  opacity: 0;
  transition: grid-template-rows var(--speed-end), opacity var(--speed-end);
  & > div {
    overflow: hidden;
    color: var(--clr-text-dim);
    
    visibility: hidden;
    transition: visibility .25s;
    & > p:first-child {margin-top: revert;}
  }
}
  // ? Styles
.expandable-title:hover > :not(.expandable-title-icon) {
  color: var(--clr-text);
}
/* .expandable-title:hover > [class$=icon],
.expandable-control:focus + [class$=title] > [class$=icon] {
  filter: invert(1);
} */
.expandable-control:focus + [class$=title] {
  outline: 2px solid var(--clr-text);
  color: var(--clr-text);
}
.expandable-control:checked + [class$=title] > [class$=icon] {
  opacity: 1;
  &::after {
    transform: rotate(90deg);
  }
}
  // ? Toggles
.expandable-control:checked ~ [class$=content] {
  grid-template-rows: 1fr;
  opacity: 1;
  transition: grid-template-rows var(--speed-start), opacity var(--speed-start);
  & > div {
    visibility: visible;
  }
  & .chrome-lazyload-enforcer {
    height: 0;
    transition-delay: 0s;
  }
}

// * @main # Tooltip
.tooltip {
  --speed-start: .25s;
  --speed-end: .1s;
  --tooltip-position: translateX(0);
  --tooltip-position-start: translateY(20px) var(--tooltip-position); // Using pixel otherwise coma result break the border
  --tooltip-position-end: translateY(28px) var(--tooltip-position); 
  color: var(--clr-tooltip-link);
  display: inline;
  &:is(:hover, :focus-within) {
    color: var(--clr-tooltip-link-hover);
  }
  & > span:last-child {
    cursor: help;
    text-decoration: underline;
  }
  // ? @section ## Mod
  &.slow {--speed-start: 1s;--speed-end: .5s;}
  &.wide {width: unset;}
  &.click-only:hover > .tooltip-content {
    visibility: hidden;
    opacity: 0;
    transform: var(--tooltip-position-start);
  }
  &.click-only:focus-within > .tooltip-content {
    visibility: visible;
    opacity: 1;
    transform: var(--tooltip-position-end);
  }
}
.tooltip-content {
  z-index: var(--layer-tooltip);
  visibility: hidden;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  max-width: 848px;
  max-height: 50vh;
  width: fit-content;
  padding: 6px 16px;
  margin: auto;
  box-sizing: border-box;
  // pointer-events: none;
  overflow: auto;
  scrollbar-width: thin;
  
  color: var(--clr-tooltip-text);
  background: var(--clr-tooltip-background);
  border-image: url(/img/border-2.png) 8 / 16px / 8px 0; // Border outset on vertical to make the hidden overflow work
  transform: var(--tooltip-position-start);
  transition:
    visibility var(--speed-end) .2s,
    opacity var(--speed-end) .2s,
    transform var(--speed-end) calc(.2s + var(--speed-end)); // Make it fade to close
}
/* ... */

